# dbt-kg

./: .gitignore  Dockerfile.server  README.md  common-postgres.env  docker-compose.chat.yml  docker-compose.educational-dbt-docs.yml  docker-compose.falkordb.yml  docker-compose.neo4j.yml  docker-compose.postgres.yml  docker-compose.ui.yml  justfile  pyproject.toml  requirements-dev.txt  template.env
.github/workflows/: docker-publish.yml  publish.yml
DbtEducationalDataProject/: README.md  dbt_project.yml  entrypoint.sh
DbtEducationalDataProject/docs/: overview.md
DbtEducationalDataProject/seeds/: quarter_calendar.csv
DbtEducationalDataProject/tests/: test_attendance_consistency.sql  test_enrollment_integrity.sql
DbtExampleProject/: .Dockerfile  .gitignore  dbt_project.yml  entrypoint.sh  profiles.yml
DbtExampleProject/macros/: create_sources.sql
DbtExampleProject/models/: active_customers.sql  customer_ltv.sql  customer_segmentation.sql  high_value_customers.sql  monthly_revenue_trends.sql  order_count_per_customer.sql  order_frequency_per_customer.sql  sources.yml  stg_customers.sql  stg_orders.sql  total_revenue_per_customer.sql
DbtExampleProject/seeds/: test_seed.csv
DbtExampleProject/snapshots/: test.sql
DbtExampleProject/tests/: empty_table.sql
app/databases/: postgres.py
app/models/: __init__.py
app/models/inference/: bedrock_model.py  (+1 more)
app/rag/: vector_index.py
app/server/: chat.py  llm.py  load_falkor.py  load_neo4j.py  main.py  upload_dbt_metadata.py
dbt_graph_loader/: README.md  __init__.py  cli.py
streamlit/: .Dockerfile  Main.py
(+39 files in other folders)
